<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudAll"
    android:onClick="BACK"
    tools:context=".Activity2">

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/editTextRegisterFam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fam"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterFam"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterFam"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterFam" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterLogin" />

    <EditText
        android:id="@+id/editTextRegisterRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/repeatPass"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <Button
        android:id="@+id/buttonRegisterRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="BACK"
        android:text="Зарегестрироваться"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterRepeatPassword"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterRepeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterRepeatPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegisterRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegisterRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>